fixed radio buttons in sync modal

--- a/www/app/remote-connection/sync-modal.html
+++ b/www/app/remote-connection/sync-modal.html
@@ -1,12 +1,12 @@
 <ion-modal-view>
   <ion-header-bar class='bar-dark nav-title-slide-ios7'>
     <h1 class='title'>Sync Spots with Strabo Database</h1>
-
     <div class='button button-clear' ng-click='vm.closeModal("syncModal")'><span class='icon ion-close'></span></div>
   </ion-header-bar>
   <ion-content class='has-header' ng-controller='SyncModalController as vmChild'>
-    <h6>You are currently logged in as: {{ vmChild.loginEmail }}</h6>
-
+    <div class='padding'>
+      You are currently logged in as: {{ vmChild.loginEmail }}
+    </div>
     <div ng-show='vmChild.progress.showProgress'>You are uploading spot {{ vmChild.progress.current }} of {{
       vmChild.progress.total
       }}
@@ -36,62 +36,42 @@
               Create Dataset
             </button>
           </div>
-
           <!-- Show Dataset Operations -->
-          <div>
-            <div class='list'>
-              <label class='item item-radio' ng-hide='vmChild.dataset.name=="-- new dataset --"'>
-                <input type='radio' name='group' ng-model='vmChild.operation' value='download'>
-
-                <div class='item-content'>
-                  <i class='icon ion-android-download'></i>
-                  Download all Spots from <b>{{ vmChild.dataset.name }}</b>
-                </div>
-                <i class='radio-icon ion-checkmark'></i>
-              </label>
-              <label class='item item-radio' ng-hide='vmChild.dataset.name=="-- new dataset --"'>
-                <input type='radio' name='group' ng-model='vmChild.operation' value='upload'>
-
-                <div class='item-content'>
-                  <i class='icon ion-upload'></i>
-                  Upload all Spots to <b>{{ vmChild.dataset.name }}</b>
-                </div>
-                <i class='radio-icon ion-checkmark'></i>
-              </label>
-              <label class='item item-radio' ng-hide='vmChild.dataset.name=="-- new dataset --"'>
-                <input type='radio' name='group' ng-model='vmChild.operation' value='remove'>
-
-                <div class='item-content'>
-                  <i class='icon ion-trash-b'></i>
-                  Remove all Spots from <b>{{ vmChild.dataset.name }}</b> and delete <b>{{ vmChild.dataset.name }}</b>
-                </div>
-                <i class='radio-icon ion-checkmark'></i>
-              </label>
-              <label class='item item-radio'>
-                <input type='radio' name='group' ng-model='vmChild.operation' value='deleteAll'>
-
-                <div class='item-content'>
-                  <i class='icon ion-trash-b'></i>
-                  Delete <b>ALL</b> Spots for this user on the server
-                </div>
-                <i class='radio-icon ion-checkmark'></i>
-              </label>
+          <div ng-hide='vmChild.dataset.name=="-- new dataset --"'>
+            <ion-radio ng-model='vmChild.operation' value='download'>
+              <i class='icon ion-android-download'></i>
+              Download all Spots from <b>{{ vmChild.dataset.name }}</b>
+            </ion-radio>
+            <ion-radio ng-model='vmChild.operation' value='upload'>
+              <i class='icon ion-upload'></i>
+              Upload all Spots to <b>{{ vmChild.dataset.name }}</b>
+            </ion-radio>
+            <ion-radio ng-model='vmChild.operation' value='remove'>
+              <i class='icon ion-trash-b'></i>
+              Remove all Spots from <b>{{ vmChild.dataset.name }}</b> and delete <b>{{ vmChild.dataset.name }}</b>
+            </ion-radio>
+            <ion-radio ng-model='vmChild.operation' value='deleteAll'>
+              <i class='icon ion-trash-b'></i>
+              Delete <b>ALL</b> Spots for this user on the server
+            </ion-radio>
+            <div class='padding'>
+              <button ng-click='vmChild.startDatasetOp()' ng-disabled='!vmChild.dataset || !vmChild.operation'
+                      class='button button-positive icon-left icon'>
+                Start
+              </button>
             </div>
-            <button ng-click='vmChild.startDatasetOp()' ng-disabled='!vmChild.dataset || !vmChild.operation'
-                    class='button button-positive icon-left icon'>Start
-            </button>
           </div>
         </div>
       </div>
     </div>
-    <div ng-show='vmChild.progress.showUploadDone'>Finished uploading spots to Dataset <b>{{ vmChild.dataset.name }}</b>
-      on the
-      server.
+    <div class='padding' ng-show='vmChild.progress.showUploadDone'>
+      Finished uploading spots to Dataset <b>{{ vmChild.dataset.name }}</b> on the server.
     </div>
-    <div ng-show='vmChild.progress.showDownloadDone'>Finished downloading spots from Dataset <b>{{ vmChild.dataset.name
-      }}</b> on
-      the server.
+    <div class='padding' ng-show='vmChild.progress.showDownloadDone'>
+      Finished downloading spots from Dataset <b>{{ vmChild.dataset.name}}</b> on the server.
     </div>
-    <div>{{ vmChild.downloadProgress }}</div>
+    <div class='padding' >
+      {{ vmChild.downloadProgress }}
+    </div>
   </ion-content>
 </ion-modal-view>
