--- a/www/app/map/offline-map.html
+++ b/www/app/map/offline-map.html
@@ -3,28 +3,38 @@
     <button menu-toggle='left' class='button button-icon icon ion-navicon'></button>
   </ion-nav-buttons>
   <ion-nav-buttons side='right'>
-    <button ng-click='vm.clearOfflineTile();' class='button button-icon icon ion-trash-b'></button>
-    {{vm.numOfflineTiles}} tiles
+    <button ng-click='vm.clearOfflineTile();' class='button button-icon icon ion-trash-b'
+            ng-hide='vm.numOfflineTiles === 0'></button>
   </ion-nav-buttons>
   <ion-content class='has-header'>
-    <ion-list>
-      <ion-item ng-repeat='map in vm.maps.maps'>
-        <div class='row'>
-          <div class='col'>
-            <b>{{map.name}}</b>  <small>({{map.tileArray.length}} tiles, {{map.size | normalizeBytes}}, {{map.mapProvider}})</small>
-            <span ng-if='map.date'><br><small>Map tiles downloaded: {{ map.date }}</small></span>
+    <div class='padding' ng-show='vm.numOfflineTiles === 0'> There are no saved maps.</div>
+    <div ng-hide='vm.numOfflineTiles === 0'>
+      <ion-list>
+        <ion-item ng-repeat='map in vm.maps.maps'>
+          <div class='row'>
+            <div class='col'>
+              <b>{{map.name}}</b>  <small>({{map.tileArray.length}} tiles, {{map.size | normalizeBytes}}, {{map.mapProvider}})</small>
+              <span ng-if='map.date'><br><small>Map tiles downloaded: {{ map.date }}</small></span>
+            </div>
+            <div class='col item-button-right'>
+              <button class='button button-second icon-left button-small button-calm ion-edit ' ng-click='vm.edit(map)'>
+                Edit
+              </button>
+              <button class='button icon-left button-small button button-assertive ion-trash-b'
+                      ng-click='vm.deleteTiles(map)'>
+                Delete
+              </button>
+            </div>
           </div>
-          <div class='col item-button-right'>
-            <button class='button button-second icon-left button-small button-calm ion-edit ' ng-click='vm.edit(map)'>
-              Edit
-            </button>
-            <button class='button icon-left button-small button button-assertive ion-trash-b'
-                    ng-click='vm.deleteTiles(map)'>
-              Delete
-            </button>
-          </div>
-        </div>
-      </ion-item>
-    </ion-list>
+        </ion-item>
+      </ion-list>
+      <div class='padding'>
+        Total Number of Saved Tiles: {{ vm.numOfflineTiles }} <br>
+        Total Size of Saved Tiles: {{ vm.offlineTilesSize }} <br>
+        <small>Note some tiles may be used in more than one saved map so the total number and total size of saved tiles
+          is not simply a sum of the individual map properties. Deleting an individual map will only delete those tiles
+          not used in any other map.</small>
+      </div>
+    </div>
   </ion-content>
 </ion-view>
